tests/semantic/invalid/argument_errors/wrong_count.src
fn f(int a) { }
fn main() {
  f(1, 2);
}
